--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                             <table class="table table-striped table-sm text-center">
                                 <thead>
                                     <tr>
-                                        <th scope="col">Route Name</th>
-                                        <th scope="col">Destination</th>
-                                        <th scope="col">Frequency (min)</th>
-                                        <th scope="col">Next Train Scheduled</th>
-                                        <th scope="col">Minutes to Arrival</th>
+                                        <th>Route Name</th>
+                                        <th>Destination</th>
+                                        <th>Frequency (min)</th>
+                                        <th>Next Train Scheduled</th>
+                                        <th>Minutes to Arrival</th>
                                     </tr>
                                 </thead>
                                 <tbody id="tableBody">
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-md-6">
                 <!-- form goes here -->
                 <div class="card">
                     <h5 class="card-header text-white bg-dark">Add a Route</h5>
@@ -102,7 +102,7 @@
                                     <span class="input-group-text">Minutes</span>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Add Route</button>
+                            <button type="submit" class="btn btn-primary" id="trainAddRouteButton">Add Route</button>
                         </form>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
         </div>
     </footer>
 
-    <!-- Optional JavaScript -->
+    <!-- Bootstrap JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -125,7 +125,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
 
-    <script src="assets/javascript/app.js"></script>
+    <!-- Added Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+
+    <!-- Added Moment JS -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
+    <script src="assets/javascript/javascript.js"></script>
 </body>
 
 </html>
