added moment.js logic

--- a/index.html
+++ b/index.html
@@ -62,13 +62,7 @@
                                     </tr>
                                 </thead>
                                 <tbody id="tableBody">
-                                    <tr>
-                                        <td>The Carolinian</td>
-                                        <td>Raleigh</td>
-                                        <td>120</td>
-                                        <td>TBD</td>
-                                        <td>TBD</td>
-                                    </tr>
+                                    <!-- data populates here -->
                                 </tbody>
                             </table>
                         </div>
@@ -85,19 +79,19 @@
                         <form>
                             <div class="form-group">
                                 <label for="trainName">Route Name</label>
-                                <input type="text" class="form-control" id="trainName" placeholder="The Carolinian">
+                                <input type="text" class="form-control" id="trainName">
                             </div>
                             <div class="form-group">
                                 <label for="trainDestination">Destination</label>
-                                <input type="text" class="form-control" id="trainDestination" placeholder="Raleigh">
+                                <input type="text" class="form-control" id="trainDestination">
                             </div>
                             <div class="form-group">
                                 <label for="trainFirstDeparture">First Departure</label>
-                                <input type="text" class="form-control" id="trainFirstDeparture" placeholder="18:00">
+                                <input type="text" class="form-control" id="trainFirstDeparture" placeholder="Formatted as 24 hour time">
                             </div>
                             <label for="trainFrequencyOfDeparture">Frequency</label>
                             <div class="form-group input-group">
-                                <input type="text" class="form-control" id="trainFrequencyOfDeparture" placeholder="120">
+                                <input type="text" class="form-control" id="trainFrequencyOfDeparture">
                                 <div class="input-group-append">
                                     <span class="input-group-text">Minutes</span>
                                 </div>
